@@ -27,6 +27,12 @@
    Gaelen Burke at the 2013 GMOD Summer School for pointing out the
    need for this, and for assistance in testing the new feature.
 
+ * `biodb-to-json.pl` configuration files now support a `trackType`
+   configuration key in each track configuration that can be used to
+   set the JavaScript track class that will be used for the formatted
+   data (e.g. "JBrowse/View/Track/CanvasFeatures" to use the new,
+   improved HTML5 canvas-based feature tracks).
+
  * Integrated a `maker2jbrowse` script into the core JBrowse
    distribution.  You can now visualize your MAKER results in JBrowse
    with a single command:
